Fixed alignment  issue

--- a/src/App.css
+++ b/src/App.css
@@ -353,7 +353,7 @@
 
 .header-component {
   width: 100%;
-  height: 64px;
+  height: 68.5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
